# Pathole_yolov8

./: CMakeLists.txt  detection.py  log.txt  train.cmd  train.py
architecture/: yolov8.yaml
runs/detect/train/: args.yaml  results.csv
runs/detect/train10/: args.yaml  log.txt  results.csv
runs/detect/train10/weights/: best.pt  last.pt
runs/detect/train2/: args.yaml
runs/detect/train2_optimization_done_model_size_2MB/: args.yaml  results.csv
runs/detect/train2_optimization_done_model_size_2MB/weights/: best.pt  last.pt
runs/detect/train3/: args.yaml  results.csv
runs/detect/train3/weights/: best.pt  last.pt
runs/detect/train4/: args.yaml  results.csv
runs/detect/train4/weights/: best.pt  last.pt
runs/detect/train4_medium/: args.yaml  results.csv
